--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,10 +16,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Rename config file
+      run: mv config-example.yaml config.yaml
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.22'
+        go-version: '1.24'
 
     - name: Build
       run: go build -v ./...
